Add --add-modules=ALL-MODULE-PATH for app images.